<resources>
    <string name="app_name">myEventApplication</string>

    <!-- text menu -->
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_ended">Ended</string>
    <string name="title_setting">Setting</string>

    <string name="dark_mode">Dark Mode</string>


    <string name="txt_dicoding_event">Dicoding Event</string>
    <string name="txtt_upcoming_event">Upcoming Event</string>
    <string name="txt_finished_event">Finished Event</string>
    <string name="txt_example_search_bar">e.g Belajar Android</string>
    <string name="txt_daftar_sekarang">Kunjungi Dicoding</string>
    <string name="error_tidak_diketahui">Error tidak diketahui</string>
    <string name="txt_main_banner">Main Banner</string>
    <string name="txt_icon">Icon</string>
    <string name="txt_owner_by">Diselengarakan oleh :</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="coba_periksa_koneksi">Coba periksa koneksi</string>
    <string name="txt_item_banner">Item Banner</string>
    <string name="daftar_gratis">Daftar Gratis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>