<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myeventapplication.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_upcoming"
        android:name="com.example.myeventapplication.ui.fragment.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_nav_upcoming_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_ended"
        android:name="com.example.myeventapplication.ui.fragment.ended.DoneFragment"
        android:label="@string/title_ended"
        tools:layout="@layout/fragment_ended" >
        <action
            android:id="@+id/action_nav_ended_to_detailEventActivity"
            app:destination="@id/detailEventActivity" />
    </fragment>
    <activity
        android:id="@+id/detailEventActivity"
        android:name="com.example.myeventapplication.ui.fragment.detail.DetailEventActivity"
        android:label="activity_detail_event"
        tools:layout="@layout/activity_detail_event" >
        <argument
            android:name="event_id"
            app:argType="string" />
    </activity>
</navigation>