<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment">

    <TextView
        android:id="@+id/tv_title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_dicoding_event"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_upcoming_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_app">

        <TextView
            android:id="@+id/tv_upcoming_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtt_upcoming_event"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_up_coming"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:carousel_alignment="center"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_event"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_upcoming_event" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_finished_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_finished_event"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_upcoming_event" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_done"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="80dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finished_event"
        tools:listitem="@layout/item_event" />

    <ProgressBar
        android:id="@+id/progressBarCarousel"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cl_upcoming_event"
        app:layout_constraintEnd_toEndOf="@+id/cl_upcoming_event"
        app:layout_constraintStart_toStartOf="@+id/cl_upcoming_event"
        app:layout_constraintTop_toTopOf="@+id/cl_upcoming_event"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rv_done"
        app:layout_constraintEnd_toEndOf="@id/rv_done"
        app:layout_constraintStart_toStartOf="@id/rv_done"
        app:layout_constraintTop_toTopOf="@+id/rv_done"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>